1: minor changes on style - 2:scrollbar fixed

--- a/web-client/src/app/globals.css
+++ b/web-client/src/app/globals.css
@@ -13,6 +13,15 @@
     --foreground: #ededed;
   }
 }
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    display: none; /* @ Current State: Help to center <ListOfComponents> */
+  }
+
+  body {
+    scrollbar-width: none; /* Per Firefox */
+  }
+}
 
 body {
   color: var(--foreground);
@@ -43,6 +52,6 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #bebebe; /* Colore del thumb quando si passa sopra */
+  background: #dfdfdf; /* Colore del thumb quando si passa sopra */
 }
 
